--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Final Frontend Academy / CV / YP4.0</title>
     <link rel="stylesheet" href="Estilos/Estilocv.css"/>
+    <link rel="icon" type="image/x-icon" href="Imagenes/icono.jpg">
+    <!--open Graph data-->
+    <meta property="og:title" conetnt="Web CV"/>
+    <meta property="og:type" content="cv" />
+    <meta property="og:image" content=" http://kikewol.github.io" /> 
+
+
 </head>
 <body> 
     
